<resources>
    <string name="app_name">CHHATTISGARH PDS</string>
    <string name="Home_State">Home State</string>
    <string name="Sale_State">Sale State</string>
    <string name="Sale_State_FPSID">Sale State FPSID</string>
    <string name="Receipt_No">Receipt No</string>
    <string name="Shop_ID">Shop ID</string>
    <string name="Consumer_Name">Name of Consumer</string>
    <string name="UID_Ref_ID">UID Ref ID</string>
    <string name="ItemTot">Item(Tot)</string>
    <string name="AvailQty">AvailQty</string>
    <string name="Quantities_In_KGsLTRsPkts">(**Quantities In KGs/LTRs/Pkts)</string>
    <string name="printsuccess">Print Success</string>
    <string name="printfailed">Print Failed</string>
    <string name="Device_Not_Found">Device Not Found</string>
    <string name="Device_Not_Ready">Device Not Ready</string>
    <string name="Exception">Exception </string>
    <string name="BENEFICIARY">BENEFICIARY</string>
    <string name="CHHATISGARHPDS">CHHATTISGARH  AePDS</string>
    <string name="SET">SET</string>
    <string name="UID_DETAILS">UID DETAILS</string>
    <string name="Login">LOGIN</string>
    <string name="RD"> RD</string>
    <string name="COMMODITY_WEIGHT">COMMODITY WEIGHT</string>
    <string name="COMMODITY_WEIGHING">COMMODITY WEIGHING</string>
    <string name="Iris">I</string>
    <string name="Exit">Exit</string>
    <string name="Settings">Settings</string>
    <string name="ResponseCode">ResponseCode :</string>
    <string name="Reasonreq">Reason Request</string>
    <string name="ResponseMsg">ResponseMsg :</string>
    <string name="Last_Recp">Last Reciept :</string>
    <string name="Mem">Member :</string>
    <string name="Member_Fusion">Member Fusion :</string>
    <string name="Man">Manual :</string>
    <string name="Member_Wadh">Member Wadh :</string>
    <string name="ekyc">EKYC :</string>
    <string name="Weighing_machine">Weighing Machine</string>
    <string name="Do_you_want_to_Quit">Do you want to Quit</string>
    <string name="Selected_option">Selected Option</string>
    <string name="Dealer_Details">Downloading Dealer Details</string>
    <string name="NAME">NAME</string>
    <string name="TYPE">TYPE</string>
    <string name="Consent_Form">Consent Form </string>
    <string name="Back">Back</string>
    <string name="Scan_FP">Scan FP</string>
    <string name="Next">NEXT </string>
    <string name="Agree">I Agree</string>
    <string name="Disagree">Disagree</string>
    <string name="SCHEME">SCHEME</string>
    <string name="RO_Quantity">RO Quantity</string>
    <string name="DISPATCH">DISPATCH</string>
    <string name="ISSUE_GOODS">ISSUE GOODS</string>
    <string name="OB">OB</string>
    <string name="Get_Weight">Get Weight</string>
    <string name="Enter_Observation">Enter Observation</string>
    <string name="Enter_Received">Enter Received</string>
    <string name="CASH_PDS">CASH PDS</string>
    <string name="RC_No">RATION CARD NO.</string>
    <string name="Aadhaar">Aadhaar </string>
    <string name="Card_No">RC No.</string>
    <string name="Mem_Details">MEMBERS DETAILS</string>
    <string name="Home">Home</string>
    <string name="Last_Reciept">Last Reciept</string>
    <string name="Home_State_Name">Home State Name</string>
    <string name="Home_District_Name">Home District Name</string>
    <string name="Card_Type">Card Type</string>
    <string name="Menus">Menus</string>
    <string name="HOME">HOME</string>
    <string name="Issue">Issue Goods</string>
    <string name="Inspection">Inspection</string>
    <string name="Aadhaar_Services">Aadhaar Services</string>
    <string name="Receive_Goods">Receive Goods</string>
    <string name="Reports">Reports</string>
    <string name="Others">Others</string>
    <string name="Logout">Logout</string>
    <string name="ISSUE">ISSUE</string>
    <string name="Cash_PDS">CHHATISGARH PDS</string>
    <string name="Cashless_PDS">Cashless PDS</string>
    <string name="IMPDS">IMPDS</string>
    <string name="MEMEBER_DETAILS">MEMEBER DETAILS</string>
    <string name="UID">UID</string>
    <string name="Iris1">Iris</string>
    <string name="Otp">OTP</string>
    <string name="COMMODITIES">COMMODITIES</string>
    <string name="CName">Commodity</string>
    <string name="BalQty">BalQty</string>
    <string name="Rate">Rate</string>
    <string name="issueQty">IssueQty</string>
    <string name="ClBal">ClBal</string>
    <string name="Get">Get</string>
    <string name="Confirm">Confirm</string>
    <string name="Please_Enter_Issue_Qty">Please Enter Issue Qty</string>
    <string name="Unit">Unit</string>
    <string name="Balance">Balance</string>
    <string name="Unit_Price">Unit Price</string>
    <string name="CommTot">Comm</string>
    <string name="PrevBal">PrevBal</string>
    <string name="AllocQty">AllocQty</string>
    <string name="Price">Price</string>
    <string name="Total">Total</string>
    <string name="Please_connect_to_the_Bluetooth_printer_to_print">Please connect to the Bluetooth printer to print</string>
    <string name="Connect">Connect</string>
    <string name="Print">Print</string>
    <string name="Amount">Amount</string>
    <string name="MDM">MDM</string>
    <string name="PRINT">PRINT</string>
    <string name="DAILY_SALES_REPORT">DAILY SALES REPORT</string>
    <string name="ddmmyyyy">dd/mm/yyyy</string>
    <string name="View">View</string>
    <string name="Comm">Comm</string>
    <string name="AAY">AAY</string>
    <string name="SFY">SFY</string>
    <string name="PHH">PHH</string>
    <string name="TOTAL">TOTAL SALE (in Kgs)</string>
    <string name="TOTAL_AMOUNT">TOTAL AMOUNT</string>
    <string name="CURRENT_STOCK">CURRENT STOCK</string>
    <string name="Scheme">Scheme</string>
    <string name="Stock">Stock</string>
    <string name="CB">CB(in Kgs)</string>
    <string name="REPORTS">REPORTS</string>
    <string name="Daily_Sales_Report">Daily Sales Report</string>
    <string name="SALES_REPORT">SALES REPORT</string>
    <string name="Stock_Report">Stock Report</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Device">Device</string>
    <string name="Update">Update</string>
    <string name="Device_Info">Device Info</string>
    <string name="Pairing">Weighing Device Pairing</string>
    <string name="Device_Parameters">Device Parameters</string>
    <string name="DEVICE">DEVICE</string>
    <string name="Device_ID">Device ID</string>
    <string name="RD_Service">RD Service :</string>
    <string name="selected_language">Selected Language</string>
    <string name="Language">Language</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">हिंदी</string>
    <string name="DEVICE_INFO">DEVICE INFO</string>
    <string name="UPDATE">UPDATE</string>
    <string name="USB">USB</string>
    <string name="GPRS">GPRS</string>
    <string name="TMS">TMS</string>
    <string name="Upload_Log">Upload Log</string>
    <string name="Please_Select_Any_Option">Please Select Any Option</string>
    <string name="Submit">Submit</string>
    <string name="BENEFICIARY_VERIFY">BENEFICIARY VERIFY</string>
    <string name="CardNo">Card No.</string>
    <string name="Aadhaar_No">Aadhaar No. </string>
    <string name="Ok">Ok</string>
    <string name="Member_ID">Member ID</string>
    <string name="Image">Image</string>
    <string name="ICDS">ICDS</string>
    <string name="AWCID">AWC ID</string>
    <string name="Details">Details</string>
    <string name="RCNO">RC NO. </string>
    <string name="B1">B1</string>
    <string name="Rd_Service">No RD Service</string>
    <string name="RD_Service_Not_Started">RD Service Not Started ...</string>
    <string name="RD_service_discovery_Failed">RD service discovery Failed</string>
    <string name="RD_Service_Msg">Fingerprint RD Service Application is not avaliable in Device</string>
    <string name="Please_Check_Device_Internet_Connection">Please Check Device Internet Connection</string>
    <string name="Dealers">Dealers</string>
    <string name="Fetching_Dealers">Fetching Dealers ...</string>
    <string name="DealerDetails">Dealer Details</string>
    <string name="Application">Application</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Start_Ok">OK</string>
    <string name="No_Update_Found">No Update Found</string>
    <string name="Update_Found">Update Found</string>
    <string name="FTP">FTP</string>
    <string name="Please_Try_Again">Please Try Again..</string>
    <string name="Explain_here_why_the_app_needs_permissions">Explain here why the app needs permissions</string>
    <string name="Bio">Bio</string>
    <string name="Please_check_Consent_Form">Please check Consent Form</string>
    <string name="Internet_Connection">No Internet Connection</string>
    <string name="Internet_Connection_Msg">Please check Device Internet Connection and Try again</string>
    <string name="Connection_Error">Connection Error</string>
    <string name="Please_Select_Dealer_Name">Please Select Dealer or Nominee</string>
    <string name="Please_Select_Another_Dealer">Please Select Another Dealer Name</string>
    <string name="Dealer">Dealer</string>
    <string name="Please_Select_FP_Authentication_Dealer">Please Select FP Authentication Dealer</string>
    <string name="Please_wait">Please Wait</string>
    <string name="Do_you_want_to_Cancel">Do you want to Cancel</string>
    <string name="IRIS_login">IRIS login</string>
    <string name="Biometric_login">Biometric  login</string>
    <string name="Biometric">Biometric</string>
    <string name="Password_login">Password login</string>
    <string name="Password">Password</string>
    <string name="Please_Enter_Dealer_Authentication_Password">Please Enter Dealer Authentication Password</string>
    <string name="Dealer_Password">Dealer Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Authenticating">Authenticating...</string>
    <string name="Downloading_Menus">Downloading Menus</string>
    <string name="Dealer_Authentication">Dealer Authentication: </string>
    <string name="Dealer_Wadh">Dealer Wadh : </string>
    <string name="RD_SERVICE_ERROR">RD SERVICE ERROR</string>
    <string name="PID_Exception">PID Exception</string>
    <string name="NA">UID is Not Present</string>
    <string name="NA_MSG">Please Select Other Member</string>
    <string name="Battery">Battery</string>
    <string name="Battery_Msg">Unable To Print Recipt due to Low Battery</string>
    <string name="Battery_plugin">Battery % is less than 20, Please connect Adapter</string>
    <string name="Cashless_PDS_function_is_Not_Available">Cashless PDS function is Not Available</string>
    <string name="IMPDS_function_is_Not_Available">IMPDS function is Not Available</string>
    <string name="Members">Downloading Members Details</string>
    <string name="Fetching_Members">Fetching Members ...</string>
    <string name="Member_Details">Member Details :</string>
    <string name="Please_Enter_a_Valid_Number_RC">Please Enter RC Number</string>
    <string name="Please_Enter_a_Valid_Number_UID">Please Enter 12 digit UID Number</string>
    <string name="Please_Enter_Valid_Number">Please Enter UID</string>
    <string name="Invalid_ID">Invalid RC ID</string>
    <string name="Invalid_UID">Invalid UID</string>
    <string name="This_function_is_not_Enabled_yet">This function is not Enabled yet</string>
    <string name="Going_Back">Going Back</string>
    <string name="Please_Enter_Your_Ration_ID">Please Enter RC Number</string>
    <string name="Please_Enter_Your_Aadhaar_ID">Please Enter Your Aadhaar ID</string>
    <string name="Do_you_want_to_cancel_Session">Do you want to cancel Session</string>
    <string name="Iris_for_Authentication">Iris for Authentication</string>
    <string name="Enter_Quantity">Enter Quantity</string>
    <string name="OBSERVATION">OBSERVATION</string>
    <string name="VARIATION">VARIATION</string>
</resources>