<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ik_blue_white"
            android:orientation="horizontal"
            android:padding="@dimen/Layoutcard"
            android:weightSum="4"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bblack"
                android:gravity="center_horizontal"
                android:text="@string/CName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bblack"
                android:gravity="center_horizontal"
                android:text="@string/ClBal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bblack"
                android:gravity="center_horizontal"
                android:text="@string/OBSERVATION"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bblack"
                android:gravity="center_horizontal"
                android:text="@string/VARIATION"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeV" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ik_blue_white"
            android:orientation="horizontal"
            android:padding="@dimen/Layoutcard"
            android:weightSum="4"
            tools:ignore="MissingConstraints">

            <TextView
                android:background="@drawable/white"
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/blackblack"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:background="@drawable/bpink"
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/blackblack"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:background="@drawable/white"
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/blackblack"
                android:textSize="@dimen/TextsizeV" />

            <TextView
                android:background="@drawable/white"
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/blackblack"
                android:textSize="@dimen/TextsizeV" />
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/button"
            android:textSize="@dimen/TextsizeB"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/Enter_Observation"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/TextsizeB" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/back"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/opaque_red"
                    android:text="@string/Back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/TextsizeB"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/ok"
                    android:text="@string/Confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/TextsizeB"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>