<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UID"
                android:id="@+id/dialog"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeT"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/button"
            android:textSize="@dimen/TextsizeB"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:maxLength="12"
                    android:inputType="numberPassword"
                    android:textSize="@dimen/TextsizeB" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/back"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/opaque_red"
                    android:text="@string/Back"
                    android:foreground="@drawable/custom_ripple"
                    android:textColor="@color/white"
                    android:textSize="@dimen/TextsizeB"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/ok"
                    android:text="@string/Confirm"
                    android:foreground="@drawable/custom_ripple"
                    android:textColor="@color/white"
                    android:textSize="@dimen/TextsizeB"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>